# container-app-job-playground

./: .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
notebooks/: hello.ipynb
src/container_app_job_playground/: __main__.py  app.py
src/vscode_single_library_template/: __main__.py
tests/: test_app.py  test_functions.py  test_main.py
