[project]
name = "container-app-job-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Balazs", email = "nemeth.balazs.vince@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytimeparse2>=1.7.1",
]

[project.scripts]
container-app-job-playground = "container_app_job_playground:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
